--- a/project/thankyou.html
+++ b/project/thankyou.html
@@ -33,10 +33,10 @@
     </div>
     <button id="menu" aria-label="menu button"></button>
     <!-- Rounded switch -->
-    <label class="switch">
+    <!-- <label class="switch">
       <input type="checkbox" id="toggleCheckbox">
       <span class="slider round"></span>
-    </label>
+    </label> -->
     <nav class="navigation">
       <a href="index.html" class="navLinks active">Home</a>
       <a href="rentals.html" class="navLinks">Rentals</a>
@@ -71,7 +71,7 @@
     <script src="../scripts/getdates.js"></script>
     <script src="../scripts/menu.js"></script>
     <script src="scripts/slides.js"></script>
-    <script src="scripts/slider.js"></script>
+    <!-- <script src="scripts/slider.js"></script> -->
     <script src="scripts/windchill.js"></script>
   </body>
 </html>
