--- a/project/contact.html
+++ b/project/contact.html
@@ -32,10 +32,10 @@
     </div>
     <button id="menu" aria-label="menu button"></button>
     <!-- Rounded switch -->
-    <label class="switch">
+    <!-- <label class="switch">
       <input type="checkbox" id="toggleCheckbox">
       <span class="slider round"></span>
-    </label>
+    </label> -->
     <nav class="navigation">
       <a href="index.html" class="navLinks">Home</a>
       <a href="rentals.html" class="navLinks">Rentals</a>
@@ -75,7 +75,7 @@
   <script src="../scripts/getdates.js"></script>
   <script src="../scripts/menu.js"></script>
   <script src="scripts/join.js"></script>
-  <script src="scripts/slider.js"></script>
+  <!-- <script src="scripts/slider.js"></script> -->
 </body>
 
 </html>
