--- a/project/rentals.html
+++ b/project/rentals.html
@@ -59,7 +59,7 @@
           /> -->
           <picture>
             <source srcset="images/cozumel/beach-rentals-hero-800.webp" media="(max-width: 860px)">
-            <img id="hero-rentals-img" src="images/cozumel/beach-rentals-hero.webp" loading="lazy" alt="Conzumel beach">
+            <img id="hero-rentals-img" src="images/cozumel/beach-rentals-hero.webp" alt="Conzumel beach">
           </picture>
 
 
@@ -73,96 +73,42 @@
 
         <div class="verhicles-grid">
 
-          <!-- <article class="vehicle">
-            <img
-              src="images/rentals/scooter/honda-metropolitan-1-500.webp"
-              alt="Honda Metro Scooter model"
+          <article class="vehicle">
+            <img src="https://placehold.co/500x500" alt="placeholder"
               class="image">
             <h3>Honda Metro Scooter</h3>
-            <div class="overlay">
-              <div class="text">
-                <b>Features</b>
-                <br><br>
-                Max Persons: 1
-                Engine Size: 49cc
-               </div>
-            </div>
           </article>
 
           <article class="vehicle">
-            <img
-              src="images/rentals/scooter/honda-dio-2-500.webp"
-              alt="Honda Dio Scooter model"
-              class="image"/>
+            <img src="https://placehold.co/500x500" alt="placeholder"
+              class="image">
             <h3>Honda Dio Scooter</h3>
-            <div class="overlay">
-              <div class="text">
-                <b>Features</b>
-                <br><br>
-                Max Persons: 2
-                Engine Size: 110cc</div>
-            </div>
           </article>
 
           <article class="vehicle">
-            <img
-              src="images/rentals/scooter/honda-pcx150-1-500.webp"
-              alt="Honda PCX150 Scooter model"
-              class="image"/>
+            <img src="https://placehold.co/500x500" alt="placeholder"
+              class="image">
             <h3>Honda PCX150 Scooter</h3>
-            <div class="overlay">
-              <div class="text">                
-                <b>Features</b>
-                <br><br>
-                Max Persons: 2
-                Engine Size: 149cc</div>
-            </div>
           </article>
 
           <article class="vehicle">
-            <img
-              src="images/rentals/atv/honda-pioneer-2-500.webp"
-              alt="Honda Pioneer ATV model"
-              class="image"/>
+            <img src="https://placehold.co/500x500" alt="placeholder"
+              class="image">
             <h3>Honda Pioneer ATV</h3>
-            <div class="overlay">
-              <div class="text">                
-                <b>Features</b>
-                <br><br>
-                Max Persons: 4
-                Engine Size: 999cc</div>
-            </div>
           </article>
 
           <article class="vehicle">
-            <img
-              src="images/rentals/jeep/2door-1-500.webp"
-              alt="Jeep Wrangler - 4 door with a/c model"
-              class="image"/>
-            <h3>Jeep Wrangler - 4 door with a/c</h3>
-            <div class="overlay">
-              <div class="text">                
-                <b>Features</b>
-                <br><br>
-                Max Persons: 5
-                Engine Size: 3.6L V6</div>
-            </div>
+            <img src="https://placehold.co/500x500" alt="placeholder"
+              class="image">
+            <h3>Jeep Wrangler - 4 Door</h3>
           </article>
 
           <article class="vehicle">
-            <img
-              src="images/rentals/jeep/4door-1-500.webp"
-              alt="Jeep Wrangler - 2 door model"
-              class="image"/>
-            <h3>Jeep Wrangler - 2 door</h3>
-            <div class="overlay">
-              <div class="text">                
-                <b>Features</b>
-                <br><br>
-                Max Persons: 4
-                Engine Size: 3.6L V6</div>
-            </div>
-          </article> -->
+            <img src="https://placehold.co/500x500" alt="placeholder"
+              class="image">
+            <h3>Jeep Wrangler - 2 Door</h3>
+          </article>
+          
 
         </div>
         <h2>Models and Prices</h2>
