--- a/project/rentals.html
+++ b/project/rentals.html
@@ -74,47 +74,73 @@
         <div class="verhicles-grid">
 
           <article class="vehicle">
-            <img src="https://placehold.co/500x500" alt="placeholder"
+            <img src="https://placehold.co/250x250" alt="placeholder"
+            style="width:250px;height:250px;"
               class="image">
             <h3>Honda Metro Scooter</h3>
           </article>
 
           <article class="vehicle">
-            <img src="https://placehold.co/500x500" alt="placeholder"
+            <img src="https://placehold.co/250x250" alt="placeholder"
+            style="width:250px;height:250px;"
               class="image">
             <h3>Honda Dio Scooter</h3>
           </article>
 
           <article class="vehicle">
-            <img src="https://placehold.co/500x500" alt="placeholder"
+            <img src="https://placehold.co/250x250" alt="placeholder"
+            style="width:250px;height:250px;"
               class="image">
             <h3>Honda PCX150 Scooter</h3>
           </article>
 
           <article class="vehicle">
-            <img src="https://placehold.co/500x500" alt="placeholder"
+            <img src="https://placehold.co/250x250" alt="placeholder"
+            style="width:250px;height:250px;"
               class="image">
             <h3>Honda Pioneer ATV</h3>
           </article>
 
           <article class="vehicle">
-            <img src="https://placehold.co/500x500" alt="placeholder"
+            <img src="https://placehold.co/250x250" alt="placeholder"
+            style="width:250px;height:250px;"
               class="image">
             <h3>Jeep Wrangler - 4 Door</h3>
           </article>
 
           <article class="vehicle">
-            <img src="https://placehold.co/500x500" alt="placeholder"
+            <img src="https://placehold.co/250x250" alt="placeholder"
+            style="width:250px;height:250px;"
               class="image">
             <h3>Jeep Wrangler - 2 Door</h3>
           </article>
           
 
         </div>
-        <h2>Models and Prices</h2>
-<section class="dataTable">
 
-</section>
+        <h2>Models and Prices</h2>
+  <table id="dataTable">
+    <thead>
+        <tr>
+            <th>Rental Model</th>
+            <th>Max Riders</th>
+            <th colspan="2">Reservation</th>
+            <th colspan="2">Walk-In</th>
+        </tr>
+        <tr>
+            <th></th>
+            <th></th>
+            <th>Half Day</th>
+            <th>Full Day</th>
+            <th>Half Day</th>
+            <th>Full Day</th>
+        </tr>
+    </thead>
+    <tbody>
+        <!-- Table data will be inserted here -->
+    </tbody>
+</table>
+
         <section class="terms">
           <h2>Rental Services and Agreements</h2>
           <ul>
@@ -149,14 +175,13 @@
       <span> | </span>
       <p>&copy; <span id="copywriteyear">Year </span>Ernesto Quispe - Peru</p>
       <span> | </span>
-      <p id="lastmod"></p>
+      <p id="lastmod"> Last Modification: 04/08/2024 18:22:56</p>
       <span> | </span>
       <p>WDD230 Final Proyect</p>
     </footer>
 
     <script src="../scripts/getdates.js"></script>
     <script src="../scripts/menu.js"></script>
-    <!-- <script src="scripts/slider.js"></script> -->
-    <!-- <script src="scripts/lastVisit.js"></script> -->
+
   </body>
 </html>
