--- a/project/index.html
+++ b/project/index.html
@@ -273,24 +273,17 @@
   </main>
 
   <footer>
-    <p>Main location: 123 Avenida Rafael E. Melgar, Cozumel, Quintana Roo, Mexico 77600</p>
-    <span> | </span>
-    <p>+52 987 654 3210</p>
-    <span> | </span>
-    <p>Sister location: 456 Calle 10 Norte, Cozumel, Quintana Roo, Mexico 77620</p>
-    <span> | </span>
-    <p>+52 987 654 3210</p>
-    <span> | </span>
-    <p>contact@scoots.mx</p>
-    <span> | </span>
-    <p>&copy; <span id="copywriteyear">Year </span>Ernesto Quispe - Peru</p>
-    <span> | </span>
+    <p>Scoots &copy; <span id="copywriteyear">Year </span> - Ernesto Quispe</p>
     <p id="lastmod"></p>
-    <span> | </span>
-    <p>WDD230 Final Proyect</p>
-    <div class="social-media">
-      <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook-logo.webp" alt="icon facebook"></a>
-      <a href="https://www.instagram.com/" target="_blank"><img src="images/instagram-logo.webp" alt="icon instagram"></a>
+    <p><a href="contact.html">Contact Us</a></p>
+    <div class="social">
+      <a href="https://facebook.com" target="_blank">
+        <img src="images/facebook.png" alt="fb icon" />
+      </a>
+
+      <a href="https://instagram.com" target="_blank">
+        <img src="images/instagram.png" alt="instagram icon" />
+      </a>
     </div>
   </footer>
 
