--- a/project/rentals.html
+++ b/project/rentals.html
@@ -61,9 +61,6 @@
           <source srcset="images/cozumel/beach-rentals-hero-800.webp" media="(max-width: 860px)">
           <img id="hero-rentals-img" src="images/cozumel/beach-rentals-hero.webp" alt="Conzumel beach">
         </picture>
-
-
-
       </div>
     </div>
 
@@ -157,21 +154,18 @@
   </main>
 
   <footer>
-    <p>Main location: 123 Avenida Rafael E. Melgar, Cozumel, Quintana Roo, Mexico 77600</p>
-    <span> | </span>
-    <p>+52 987 654 3210</p>
-    <span> | </span>
-    <p>Sister location: 456 Calle 10 Norte, Cozumel, Quintana Roo, Mexico 77620</p>
-    <span> | </span>
-    <p>+52 987 654 3210</p>
-    <span> | </span>
-    <p>contact@scoots.mx</p>
-    <span> | </span>
-    <p>&copy; <span id="copywriteyear">Year </span>Ernesto Quispe - Peru</p>
-    <span> | </span>
-    <p id="lastmod"> Last Modification: 04/08/2024 18:22:56</p>
-    <span> | </span>
-    <p>WDD230 Final Proyect</p>
+    <p>Scoots &copy; <span id="copywriteyear">Year </span> - Ernesto Quispe</p>
+    <p id="lastmod"></p>
+    <p><a href="contact.html">Contact Us</a></p>
+    <div class="social">
+      <a href="https://facebook.com" target="_blank">
+        <img src="images/facebook.png" alt="fb icon" />
+      </a>
+
+      <a href="https://instagram.com" target="_blank">
+        <img src="images/instagram.png" alt="instagram icon" />
+      </a>
+    </div>
   </footer>
 
   <script src="../scripts/getdates.js"></script>
