--- a/project/contact.html
+++ b/project/contact.html
@@ -1,81 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="Scooter Rental">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://ernesto-quispe.github.io/wdd230/project/images/cozumelName.jpg">
+    <meta property="og:url" content="https://ernesto-quispe.github.io/wdd230/project">
+    <title>Scooter Rental</title>
+    <meta name="description" content="Ernesto Quispe | WDD 230 - Final Proyect | Scooter Contact">
+    <meta name="author" content="Ernesto Quispe">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/aiGenerated/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/aiGenerated/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/aiGenerated/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="images/aiGenerated/favicon_io/site.webmanifest">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/larger.css">
+    <link rel="preload" href="styles/base.css" as="style">
+    <link rel="preload" href="styles/medium.css" as="style">
+    <link rel="preload" href="styles/larger.css" as="style">
+  </head>
+  <body>
+    <!-- <div id="content"> -->
+      <header>
+        <a id="logo_link" href="index.html">
+          <img
+            class="logo"
+            src="images/logo-50.webp"
+            alt="Scoots Logo"
+          />
+        </a>
+        <nav>
+          <a href="index.html" class="navLinks">Home</a>
+          <a href="rentals.html" class="navLinks">Rentals</a>
+          <a href="reservations.html" class="navLinks">Reservations</a>
+          <a href="contact.html" class="navLinks active">Contact</a>
+          <a href="links.html" class="navLinks">Links</a>
+        </nav>
+      </header>
+      <div id="hero-rentals">
+        <div id="hero-rentals-box">
+          <!-- <img
+              id="hero-rentals-img"
+              src="images/cozumel/beach-rentals-hero.webp"
+              alt="Conzumel beach"
+            /> -->
+          <picture>
+            <source srcset="images/cozumel/beach-rentals-hero-800.webp" media="(max-width: 860px)">
+            <img id="hero-rentals-img" src="images/cozumel/banner-contact.jpg" alt="Conzumel beach">
+          </picture>
+        </div>
+      </div>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="Scooter Rental">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="https://ernesto-quispe.github.io/wdd230/project/images/cozumelName.jpg">
-  <meta property="og:url" content="https://ernesto-quispe.github.io/wdd230/project">
-  <title>Scooter Rental</title>
-  <meta name="description" content="Ernesto Quispe | WDD 230 - Final Proyect | Scooter Contact">
-  <meta name="author" content="Ernesto Quispe">
-  <link rel="apple-touch-icon" sizes="180x180" href="images/aiGenerated/favicon_io/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="images/aiGenerated/favicon_io/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="images/aiGenerated/favicon_io/favicon-16x16.png">
-  <link rel="manifest" href="images/aiGenerated/favicon_io/site.webmanifest">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/base.css">
-  <link rel="stylesheet" href="styles/medium.css">
-  <link rel="stylesheet" href="styles/larger.css">
-  <link rel="preload" href="styles/base.css" as="style">
-  <link rel="preload" href="styles/medium.css" as="style">
-  <link rel="preload" href="styles/larger.css" as="style">
-</head>
+      <main>
+        <div class="contactus-grid">
 
-<body>
-  <header>
-    <div id="logoDiv">
-    <img src="images/logo-50.webp" alt="Scoots Logo">
-    </div>
-    <button id="menu" aria-label="menu button"></button>
-    <!-- Rounded switch -->
-    <!-- <label class="switch">
-      <input type="checkbox" id="toggleCheckbox">
-      <span class="slider round"></span>
-    </label> -->
-    <nav class="navigation">
-      <a href="index.html" class="navLinks">Home</a>
-      <a href="rentals.html" class="navLinks">Rentals</a>
-      <a href="reservations.html" class="navLinks">Reservations</a>
-      <a href="contact.html" class="navLinks active">Contact</a>
-      <a href="links.html" class="navLinks">Links</a>
+          <div class="content-map">
 
-    </nav>
-  </header>
+            <div class="mapouter">
+              <iframe class="map" src="https://www.google.com/maps/d/embed?mid=1J8ESOuOVvY1Wb9l2vw8N2JkywKvGaVw&ehbc=2E312F" width="640" height="540" ></iframe>
+            </div>
 
-  <main>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d119607.11665711943!2d-87.13089466094972!3d20.47659203565301!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e577e73b40c9b%3A0xf7576fa55f95f92a!2sCarnival%20Dock!5e0!3m2!1sen!2scl!4v1712460287599!5m2!1sen!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="card-phone">
+              <img
+                id="phone-img"
+                src="images/rsz_2phone_4307.png"
+                alt="Black phone"
+              />
+              <div class="overlay">
+                 <div class="text">+562 2654 3570</div>
+              </div>   
+            </div>
+
+            <div class="card-calendar">
+              <img
+                id="calendar-img"
+                src="images/organizer_calendar_clock_pencil_10047.png"
+                alt="Calendar with pencil and clock"
+              />
+              <div class="overlay">
+                  <div class="text">Monday to Friday from 08:30 a.m. to 2:00 p.m.</div>
+             </div>   
+            </div>
+          </div>
+
+          <section class="contactus-msg">
+            <h2>Contact Us</h2>
+            <p>
+              We have a series of services focused directly on attending and
+              solving the presentations, requests, and claims made by the
+              residents and users of the commune. We provide information of a
+              communal and municipal nature that is not of an emergency or
+              urgent nature, but that does require municipal management in the
+              territory of the commune. Our Neighborhood Assistance Department
+              (DAV) is the only channel that ensures residents an effective and
+              official response from the municipality in a short period of time.
+              Its main function is to ensure a timely response to the residents.
+            </p>
+          </section>
+          <div class="myForm">
+            <form action="POST">
+              <ul>
+                <li>
+                  <label class="label-form" for="name">Name:</label>
+                  <input type="text" id="name" name="user_name" placeholder="Full name" required/>
+                </li>
+                <li>
+                  <label class="label-form" for="mail">Email:</label>
+                  <input type="email" id="mail" name="user_email" placeholder="username@domain.com" required/>
+                </li>
+                <li> 
+                </li>
+                <li>
+                  <label class="label-form" for="msg">Message:</label>
+                  <textarea name="user_message" id="msg" rows="5" placeholder="Your message" required></textarea>
+                </li>
+                <li>
+                  <button type="submit">Send your message</button>
+                </li>
+              </ul>
+            </form>
+          </div>
+            <div id="feedback"></div>
+        </div>
+      </main>
+
+      <footer>
+        <p>Scoots &copy; <span id="copywriteyear">Year </span> - Ernesto Quispe</p>
+        <p id="lastmod"></p>
+        <p><a href="contact.html">Contact Us</a></p>
+        <div class="social">
+          <a href="https://facebook.com" target="_blank">
+            <img src="images/facebook.png" alt="fb icon" />
+          </a>
+
+          <a href="https://instagram.com" target="_blank">
+            <img src="images/instagram.png" alt="instagram icon" />
+          </a>
+        </div>
+      </footer>
+      <script src="../scripts/getdates.js"></script>
+    <!-- </div> -->
 
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59789.690814190864!2d-86.98346928422492!3d20.512141829251174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e584db5d4ae6b%3A0x7e03d3868f770983!2sPuerto%20de%20Abrigo!5e0!3m2!1sen!2scl!4v1712460383962!5m2!1sen!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  </main>
-  <iframe src="https://www.google.com/maps/d/embed?mid=1J8ESOuOVvY1Wb9l2vw8N2JkywKvGaVw&ehbc=2E312F" width="640" height="540" ></iframe>
 
-</main>
-<footer>
-    <p>Main location: 123 Avenida Rafael E. Melgar, Cozumel, Quintana Roo, Mexico 77600</p>
-    <span> | </span>
-    <p>+52 987 654 3210</p>
-    <span> | </span>
-    <p>Sister location: 456 Calle 10 Norte, Cozumel, Quintana Roo, Mexico 77620</p>
-    <span> | </span>
-    <p>+52 987 654 3210</p>
-    <span> | </span>
-    <p>contact@scoots.mx</p>
-    <span> | </span>
-    <p>&copy; <span id="copywriteyear">Year </span>Ernesto Quispe - Peru</p>
-    <span> | </span>
-    <p id="lastmod"></p>
-    <span> | </span>
-    <p>WDD230 Final Proyect</p>
-  </footer>
+          <!-- Script to emulate backend behavior -->
+      <script>
+        // get the feedback div element so we can do something with it. <div id="feedback"></div>
+        const feedbackElement = document.getElementById('feedback');
 
-  <script src="../scripts/getdates.js"></script>
-  <script src="../scripts/menu.js"></script>
-  <script src="scripts/join.js"></script>
-  <!-- <script src="scripts/slider.js"></script> -->
-</body>
+        // get the form so we can read what was entered in it.
+        const formElement = document.forms[0];
 
+        // add a 'listener' to wait for a submission of our form. When that happens run the code below.
+        formElement.addEventListener('submit', function (e) {
+
+            e.preventDefault(); // stop the form from doing the default action
+
+            // set the contents of our feedback element to a message letting the user know the form was submitted successfully. 
+            // Notice that we pull the name that was entered in the form to personalize the message!
+            feedbackElement.innerHTML = 'Hello ' + formElement.name.value + '! Thank you for your message. We will get back with you as soon as possible!';
+
+            feedbackElement.style.display = "block"; // make the feedback element visible.
+
+            document.body.classList.toggle('moveDown'); // add a class to move everything down so our message doesn't cover it.
+            setTimeout(function(){
+              feedbackElement.style.display = "none";
+              formElement.reset();
+            },5000)
+            
+        });
+        // Scroll document to top
+        // Ref: https://www.w3schools.com/howto/howto_js_scroll_to_top.asp
+        function scrollTop() {
+          // This line makeit work on Safari
+          document.body.scrollTop = 0;
+          // This line make it work on Firefox, Chrome, Edge, and Opera
+          document.documentElement.scrollTop = 0;
+        }
+  </script>
+  </body>
 </html>
