--- a/project/index.html
+++ b/project/index.html
@@ -48,8 +48,7 @@
   </header>
   <main>
     <div id="meetbanner">
-      <p><span class="highTemp">Weather Information</span><span id="close-banner">❌</span></p>
-
+      <p><span class="highTemp">Weather Information</span><span id="close-banner"> ❌</span></p>
     </div>
 
     <div class="hero">
@@ -95,7 +94,7 @@
           Join us at Scoots, and let’s make your Cozumel experience truly unforgettable!
         </p>
       </div>
-      <!-- Container for the image gallery -->
+      <!-- Container for the Slideshow Gallery -->
       <div class="container">
         <h3>Meet Our Best Sellers!</h3>
         <!-- Full-width images with number text -->
@@ -117,49 +116,6 @@
         <div class="mySlides">
           <img src="./images/aiGenerated/jeep2-1024x768-opt.webp" loadings="lazy" alt="Jeep picture on the beach 2">
         </div>
-
-<!-- 
-        <div class="mySlides">
-          <picture>
-            <source srcset="./images/aiGenerated/atv3-512x384-opt.webp" media="(max-width: 860px)">
-            <img src="./images/aiGenerated/atv3-1024x768-opt.webp" loading="lazy" alt="scooter picture on the beach">
-          </picture>
-        </div>
-        <div class="mySlides">
-          <picture>
-            <source srcset="./images/aiGenerated/ATV1-512x384-opt.webp" media="(max-width: 860px)">
-            <img src="./images/aiGenerated/ATV1-1024x768-opt.webp" loading="lazy" alt="scooter picture on the beach 2">
-          </picture>
-        </div>
-        <div class="mySlides">
-          <picture>
-            <source srcset="./images/aiGenerated/scooter1-512x384-opt.webp" media="(max-width: 860px)">
-            <img src="./images/aiGenerated/scooter1-1024x768-opt.webp" loading="lazy" alt="scooter picture on the beach 3">
-          </picture>
-        </div>
-        <div class="mySlides">
-          <picture>
-            <source srcset="./images/aiGenerated/scooter2-512x384-opt.webp" media="(max-width: 860px)">
-            <img src="./images/aiGenerated/scooter2-1024x768-opt.webp" loading="lazy" alt="atv picture on the beach">
-          </picture>
-        </div>
-        <div class="mySlides">
-          <picture>
-            <source srcset="./images/aiGenerated/jeep1-512x384-opt.webp" media="(max-width: 860px)">
-            <img src="./images/aiGenerated/jeep1-1024x768-opt.webp" loading="lazy" alt="Jeep picture on the beach">
-          </picture>
-        </div>
-        <div class="mySlides">
-          <picture>
-            <source srcset="./images/aiGenerated/jeep2-512x384-opt.webp" media="(max-width: 860px)">
-            <img src="./images/aiGenerated/jeep2-1024x768-opt.webp" loading="lazy" alt="Jeep picture on the beach 2">
-          </picture>
-        </div> -->
-
-
-
-
-
 
         <!-- Next and previous buttons -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -290,9 +246,6 @@
   <script src="../scripts/getdates.js"></script>
   <script src="../scripts/menu.js"></script>
   <script src="scripts/slides.js"></script>
-  <!-- <script src="scripts/slider.js"></script> -->
-  <!-- <script src="scripts/spotlight.js"></script> -->
-  <!-- <script src="scripts/windchill.js"></script> -->
   <script src="scripts/weather.js"></script>
   <script src="scripts/banner.js"></script>
 
