--- a/project/index.html
+++ b/project/index.html
@@ -43,15 +43,14 @@
       <a href="reservations.html" class="navLinks">Reservations</a>
       <a href="contact.html" class="navLinks">Contact</a>
       <a href="links.html" class="navLinks">Links</a>
-
     </nav>
   </header>
   <main>
-    <div id="meetbanner">
+    <div id="weather-banner">
       <p><span class="highTemp">Weather Information</span><span id="close-banner"> ❌</span></p>
     </div>
 
-    <div class="hero">
+    <div class="hero-index">
 
       <h1>Discover Scoots, Discover Cozumel</h1>
       <img id="hero-logo" src="images/aiGenerated/scootsLocation2-300x300.webp" alt="Logo">
