--- a/project/links.html
+++ b/project/links.html
@@ -42,7 +42,7 @@
       <a href="rentals.html" class="navLinks">Rentals</a>
       <a href="reservations.html" class="navLinks">Reservations</a>
       <a href="contact.html" class="navLinks">Contact</a>
-      <a href="links.html" class="navLinks">Links</a>
+      <a href="links.html" class="navLinks active">Links</a>
     </nav>
   </header>
   <main>
@@ -108,11 +108,11 @@
     <p><a href="contact.html">Contact Us</a></p>
     <div class="social">
       <a href="https://facebook.com" target="_blank">
-        <img src="images/facebook.png" alt="fb icon" />
+        <img src="images/facebook.webp" alt="fb icon" />
       </a>
 
       <a href="https://instagram.com" target="_blank">
-        <img src="images/instagram.png" alt="instagram icon" />
+        <img src="images/instagram.webp" alt="instagram icon" />
       </a>
     </div>
   </footer>
@@ -121,8 +121,6 @@
   <script src="../scripts/menu.js"></script>
   <script src="scripts/slides.js"></script>
   <script src="scripts/slider.js"></script>
-  <!-- <script src="scripts/spotlight.js"></script> -->
-  <!-- <script src="scripts/windchill.js"></script> -->
   <script src="scripts/weather.js"></script>
   <script src="scripts/banner.js"></script>
 
