--- a/project/rentals.html
+++ b/project/rentals.html
@@ -59,7 +59,7 @@
           /> -->
         <picture>
           <source srcset="images/cozumel/beach-rentals-hero-800.webp" media="(max-width: 860px)">
-          <img id="hero-rentals-img" src="images/cozumel/beach-rentals-hero.webp" alt="Conzumel beach">
+          <img id="hero-rentals-img" src="images/cozumel/banner-rents-1700x720.webp" alt="Conzumel beach">
         </picture>
       </div>
     </div>
@@ -159,11 +159,11 @@
     <p><a href="contact.html">Contact Us</a></p>
     <div class="social">
       <a href="https://facebook.com" target="_blank">
-        <img src="images/facebook.png" alt="fb icon" />
+        <img src="images/facebook.webp" alt="fb icon" />
       </a>
 
       <a href="https://instagram.com" target="_blank">
-        <img src="images/instagram.png" alt="instagram icon" />
+        <img src="images/instagram.webp" alt="instagram icon" />
       </a>
     </div>
   </footer>
