--- a/project/reservations.html
+++ b/project/reservations.html
@@ -121,11 +121,10 @@
       <p><a href="contact.html">Contact Us</a></p>
       <div class="social">
         <a href="https://facebook.com" target="_blank">
-          <img src="images/facebook.png" alt="fb icon" />
+          <img src="images/facebook.webp" alt="fb icon" />
         </a>
-
         <a href="https://instagram.com" target="_blank">
-          <img src="images/instagram.png" alt="instagram icon" />
+          <img src="images/instagram.webp" alt="instagram icon" />
         </a>
       </div>
     </footer>
